--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -68,8 +68,8 @@
                 android:layout_height="0dp"
                 android:layout_marginBottom="32dp"
                 android:layout_marginEnd="24dp"
-                android:layout_marginLeft="32dp"
-                android:layout_marginRight="32dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="32dp"
                 android:contentDescription="@string/content_description_receipt_icon"
@@ -124,18 +124,17 @@
         </android.support.constraint.ConstraintLayout>
 
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/recent_bills_list"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginRight="0dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="0dp"
+            android:visibility="@{bills == null || bills.isEmpty()? View.GONE : View.VISIBLE}"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
-            android:layout_marginTop="0dp"
-            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
-            android:layout_marginBottom="0dp"
-            tools:listitem="@layout/item_bill_main_activity"
-            android:visibility="@{bills == null || bills.isEmpty()? View.GONE : View.VISIBLE}"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="1.0"
+            tools:listitem="@layout/item_bill_main_activity" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
